rework auto4k to use playlists instead of folders, and log only files instead of folders

--- a/script-opts/auto4k.conf
+++ b/script-opts/auto4k.conf
@@ -3,7 +3,6 @@ shader_path=~~/shaders/
 auto_run=yes
 prompt_yes_no=yes
 default_yes_mode=A
-script_mode=both
-default_folder_mode=yes
+default_playlist=yes
 font_size=100
 max_log_lines=1000
