implement secondary modes

--- a/script-opts/auto4k.conf
+++ b/script-opts/auto4k.conf
@@ -4,5 +4,6 @@ auto_run=yes
 prompt_yes_no=yes
 default_yes_mode=A
 default_playlist=yes
+include_secondary_modes=yes
 font_size=100
 max_log_lines=1000
