add possibility to disable logging

--- a/script-opts/auto4k.conf
+++ b/script-opts/auto4k.conf
@@ -1,7 +1,8 @@
+enable_logging=yes
 log_path=~~home/auto4k.log
 shader_path=~~/shaders/
 auto_run=yes
-prompt_yes_no=yes
+menu_yes_no=yes
 default_yes_mode=A
 default_playlist=yes
 include_secondary_modes=yes
